Add Decap CMS gallery backend

--- a/index.html
+++ b/index.html
@@ -73,13 +73,9 @@
         <div class="container">
           <div class="section-header">
             <h2>Galerie</h2>
-            <p>Inspirationen und Arbeitsmomente folgen in Kürze.</p>
+            <p>Aktuelle Arbeiten aus dem Studio.</p>
           </div>
-          <div class="gallery-placeholder">
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
+          <div class="gallery-grid" id="gallery-grid"></div>
         </div>
       </section>
 
